Update git aliases from base config

--- a/.gitconfig
+++ b/.gitconfig
@@ -7,10 +7,21 @@
 
 [core]
 	editor = vim
+	pager = less -FX
 [alias]
+	a = add
+	ap = add --patch
+	au = add -u
+	b = branch
+	c = commit
+	ca = commit --amend -C HEAD
+	cm = commit -m
 	co = checkout
+	cp = cherry-pick
+	d = diff
 	dc = diff --cached
 	ff = merge --ff-only
+	ls = log --oneline
 	sb = show-branch
 	st = status
 [credential]
