--- a/.gitconfig
+++ b/.gitconfig
@@ -31,6 +31,7 @@
 	ls = log --oneline
 	sb = show-branch
 	st = status
+	which-remote = rev-parse --abbrev-ref --symbolic-full-name @{u}
 [diff "gpg"]
 	textconv = gpg --no-tty --decrypt
 [init]
