Add defaultBranch config (for git 2.28+)

--- a/.gitconfig
+++ b/.gitconfig
@@ -24,7 +24,12 @@
 	dc = diff --cached
 	dcw = diff --cached --color-words
 	dcww = diff --cached --color-words='[A-Za-z0-9_]+|.'
+	dw = diff --color-words
+	dww = diff --color-words='[A-Za-z0-9_]+|.'
 	ff = merge --ff-only
 	ls = log --oneline
 	sb = show-branch
 	st = status
+[init]
+	# As of 2.28 default branch name must be specified
+	defaultBranch = master
