--- a/.gitconfig
+++ b/.gitconfig
@@ -31,6 +31,8 @@
 	ls = log --oneline
 	sb = show-branch
 	st = status
+[diff "gpg"]
+	textconv = gpg --no-tty --decrypt
 [init]
 	# As of 2.28 default branch name must be specified
 	defaultBranch = master
