--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,5 +7,10 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
+set -g @plugin 'dracula/tmux'
+
+# Set 256 colors
+set -s default-terminal 'tmux-256color'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
