--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,10 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
+# Trying for session management
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
 set -g @plugin 'dracula/tmux'
 
 # Set 256 colors
