Configure dracula theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,15 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set -g @plugin 'dracula/tmux'
+# Dracula configuration
+set -g @dracula-show-powerline true
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon \uf17c    # Tux icon on left
+set -g @dracula-border-contrast true
+
+set -g @dracula-plugins "git cpu-usage ram-usage weather time"
+# -- Dracula wheather
+set -g @dracula-show-fahrenheit false
 
 # Set 256 colors
 set -s default-terminal 'tmux-256color'
