--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,13 @@
+unbind r
+bind r source-file ~/.tmux.conf
+
+# Set window navigation like VIM
+# Try capital letters to avoid colision with last window
+bind-key H select-pane -L
+bind-key J select-pane -D
+bind-key K select-pane -U
+bind-key L select-pane -R
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
